deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy1-webmain
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webmain
  template:
    metadata:
      labels:
        app: webmain
    spec:
      containers:
        - name: pod-webmain
          image: containerregistry image/main
---
apiVersion: v1
kind: Service
metadata:
  name: svc1-webmain
spec:
  ports:
    - name: webmain-port
      port: 9001
      targetPort: 80
  selector:
    app: webmain
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy2-webcontact
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webcontact
  template:
    metadata:
      labels:
        app: webcontact
    spec:
      containers:
        - name: pod-webcontact
          image: containerregistry image/contact
---
apiVersion: v1
kind: Service
metadata:
  name: svc2-webcontact
spec:
  ports:
    - name: webcontact-port
      port: 9002
      targetPort: 80
  selector:
    app: webcontact
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy3-webevent
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webevent
  template:
    metadata:
      labels:
        app: webevent
    spec:
      containers:
        - name: pod-webevent
          image: containerregistry image/event
---
apiVersion: v1
kind: Service
metadata:
  name: svc3-webevent
spec:
  ports:
    - name: webevent-port
      port: 9003
      targetPort: 80
  selector:
    app: webevent
  type: NodePort
